fix audio element disappearing in Chrome if width is too small

--- a/src/less/components/base.less
+++ b/src/less/components/base.less
@@ -264,7 +264,6 @@ video { vertical-align: middle; }
  * 4. Exclude SVGs for IE11 because they don't preserve their aspect ratio.
  */
 
-audio,
 canvas,
 img,
 video {
